Fix Java 19/20 deprecations