@@ -23,8 +23,7 @@ import java.io.FileInputStream;
 import java.io.IOException;
 import java.io.OutputStream;
 import java.math.BigInteger;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
 import java.security.DigestInputStream;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
@@ -50,10 +49,11 @@ public enum DownloadableFile {
     public String validatedUrl(ServerUrlGenerator urlGenerator) {
         String url = url(urlGenerator);
         try {
-            new URL(url);
-        } catch (MalformedURLException mue) {
+            //noinspection ResultOfMethodCallIgnored
+            new URI(url).toURL();
+        } catch (Exception ignore) {
             throw new RuntimeException(
-                    "URL you provided to access Go Server: " + url(urlGenerator) + " is not valid");
+                    "URL you provided to access Go Server: " + url + " is not valid");
         }
         return url;
     }
