@@ -17,8 +17,8 @@ package com.thoughtworks.go.spark;
 
 import spark.Request;
 
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 
 public class RequestContext {
 
@@ -38,22 +38,20 @@ public class RequestContext {
         return new RequestContext(req.scheme(), req.raw().getServerName(), req.port(), req.contextPath());
     }
 
-    public Link build(String name, String pathAfterContext) {
-        return new Link(name, urlFor(pathAfterContext));
+    public Link build(String name, String encodedPathAfterContext) {
+        return new Link(name, urlFor(encodedPathAfterContext));
     }
 
-    public String pathWithContext(String pathAfterContext) {
-        try {
-            return new URL(protocol, host, port, contextPath + pathAfterContext).getPath();
-        } catch (MalformedURLException e) {
-            throw new RuntimeException(e);
-        }
+    public String pathFor(String encodedPathAfterContext) {
+        return contextPath + encodedPathAfterContext;
     }
 
-    public String urlFor(String pathAfterContext) {
+    public String urlFor(String encodedPathAfterContext) {
         try {
-            return new URL(protocol, host, port, contextPath + pathAfterContext).toExternalForm();
-        } catch (MalformedURLException e) {
+            // Append path separately; otherwise it will be double-encoded
+            URI rootUri = new URI(protocol, null, host, port, null, null, null);
+            return rootUri + pathFor(encodedPathAfterContext);
+        } catch (URISyntaxException e) {
             throw new RuntimeException(e);
         }
     }
